# Chess_Engine

./: .gitignore  Bithack.cpp  Board.cpp  Compile.sh  Driver.cpp  Driver.sh  IllegalMoves.txt  Move.cpp  Move.h  Moves.cpp  Moves.h  Rays.cpp  Test.cpp  \  a.out  bitboards.txt  bithack.h  board.h  client.go  compile.sh  engine.py  install-engine.sh  log.txt  main  package-lock.json  package.json  server.go  server.js  server.py  testing.h
engine/: Bithack.cpp  Board.cpp  Board.h  CMakeLists.txt  Debug.cpp  Driver.cpp  Fen.cpp  Fen.h  Move.cpp  Move.h  Moves.cpp  Moves.h  OldSearch.cpp  OldSearch.h  PST.cpp  PST.h  Search.cpp  Search.h
engine/PST/: _add_commas.py  _print_tables.py  _remove_spaces.py  _rename_initial_files.py  _reverse_tables.py  bk.txt  bn.txt  bp.txt  bq.txt  br.txt  wb.txt  wk.txt  wp.txt  wq.txt  wr.txt
output/: Move  Test
output/Board.dSYM/Contents/: Info.plist
output/Board.dSYM/Contents/Resources/DWARF/: Board
output/Move.dSYM/Contents/: Info.plist
output/Move.dSYM/Contents/Resources/DWARF/: Move
output/Test.dSYM/Contents/Resources/DWARF/: Test
public/: compile-engine.sh  engine.cpp  engine.js  engine.out  engine.wasm  index.html  script.js  style.css
public/engine/: Bithack.cpp  Bithack.h  Board.cpp  Board.h  CMakeLists.txt  Driver.cpp  Engine.cpp  Fen.cpp  Move.cpp  Move.h  Moves.cpp  Moves.h  Search.cpp  Search.h  debug.sh  driver.sh
scripts/: make-engine.sh  server-command.txt
